--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -518,7 +518,13 @@
         <div id="clinics">
             <div id="userOrgs" class="customized">
                <input type="hidden" id="stock_consent_url" value="{{ url_for('portal.stock_consent', org_name='placeholder', _external=True)}}" />
-               <p class="prompt text-muted">{{ _("In what state ")}}{% if current_user and current_user.has_role(ROLE.STAFF)%}{{_("is the patient ")}}{%else%}{{_("are you ")}}{% endif %}{{_("currently receiving prostate cancer care?") }}</p>
+               <p class="prompt text-muted">
+                {% if  current_user and current_user.has_role(ROLE.STAFF) %}
+                    {{_("In what state is the patient currently receiving prostate cancer care?")}}
+                {% else %}
+                    {{_("In what state are you currently receiving prostate cancer care?")}}
+                {% endif %}
+               </p>
                <div class="state-selector-container selector-show"><select id="stateSelector" class="form-control"></select></div>
                <div id="fillOrgs" userId="{{person.id if person}}" class="orgs-by-state" {%if person and person.has_role(ROLE.PATIENT) and person.id == current_user.id %}patient_view="true"{%endif%}>
                    <p class="clinic-prompt prompt selector-show">{{ _("What is your main clinic for prostate cancer care?")}}</p>
